<resources>
    <string name="app_name">Parcial22A_Grupo3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Log_In_button_fragment">Log In</string>
    <string name="Log_In_EditText_username_hint">Username</string>
    <string name="Log_In_EditText_password_hint">Password</string>
    <string name="Log_In_forgot_password_hint">Forgot password?</string>
    <string name="Log_In_main_title_text">Alumni App</string>
    <string name="profile_label">Student Details:</string>
    <string name="Home_ActionBar_Title">Lista de Alumnos</string>
    <string name="Login_ActionBar_Title">Inicio</string>
    <string name="Profile_ActionBar_Title">Detalles del Alumno</string>
    <string name="Settings_ActionBar_Title">Ajustes</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>