<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Fragment1">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-32dp" />

    <EditText
        android:id="@+id/LogIn_Username"
        android:layout_width="239dp"
        android:layout_height="48dp"
        android:hint="@string/Log_In_EditText_username_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/LogIn_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821"></EditText>

    <TextView
        android:id="@+id/LogIn_main_title_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Log_In_main_title_text"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/LogIn_Username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594" />

    <TextView
        android:id="@+id/LogIn_forgotPassword_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="39dp"
        android:text="@string/Log_In_forgot_password_hint"
        android:textColor="@color/purple_200"
        app:layout_constraintBottom_toTopOf="@+id/logIn_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogIn_password"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/logIn_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Log_In_button_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431" />

    <EditText
        android:id="@+id/LogIn_password"
        android:layout_width="238dp"
        android:layout_height="48dp"
        android:layout_marginBottom="52dp"
        android:hint="@string/Log_In_EditText_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/logIn_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.881"></EditText>

</androidx.constraintlayout.widget.ConstraintLayout>